# Whac-A-Mole

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  utils.py
create_datasets/imagenet/: Edge_Aug.md  prepare_ImageNet.md
create_datasets/urbancars/: CREATE_URBANCARS.md  gen_urbancars.py  predict_car_mask.py  urbancars_aug_gen_bg_only.py
data_utils/: object_scale.py
dataset/: imagenet.py  imagenet9.py  imagenet_200.py  imagenet_a.py  imagenet_d.py  imagenet_d_utils.py  imagenet_edge.py  imagenet_r.py  imagenet_sal.py  imagenet_sketch.py  imagenet_stylized.py  imagenetv2.py  objectnet.py  urbancars.py  urbancars_aug.py
eval_shortcuts/: eval_multiple_shortcuts.py  eval_watermark_shortcut.py  prepare_checkpoints_for_eval.md
imagenet_trainers/: __init__.py  augmix.py  base_trainer.py  bg_aug.py  cutmix.py  cutout.py  debian.py  eiil.py  erm.py  jtt.py  launcher.py  lff.py  lle.py  mixup.py  sd.py  txt_aug.py  wtm_aug.py
imagenet_w/: __init__.py  watermark_transform.py
model/: classifiers.py  clip_imagenet_zeroshot_data.py  criterion.py  mae_vits.py  mixup_cutmix_transforms.py  mocov3_vits.py  model_soups.py  model_zoo.py  optimizer.py  transforms.py
model/augmix/: augmix_augmentations_pool.py  augmix_augmentations_pool_urbancars.py  augmix_transforms.py
urbancars_trainers/: __init__.py  augmix.py  base_trainer.py  cf_f_aug.py  cutmix.py  cutout.py  debian.py  dfr.py  domain_independent.py  eiil.py  erm.py  groupdro.py  jtt.py  launcher.py  lff.py  lle.py  mixup.py  spectral_decouple.py  subg.py
(+53 files in other folders)
