[metadata]
name = imagenet-w
version = 1.0.0
description = ImageNet-W evaluates the watermark shortcut reliance on ImageNet.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = imagenet, robustness
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
author = Zhiheng Li
author_email = zhiheng.li@rochester.edu

[options]
zip_safe = True
include_package_data = True
requires-python = ">=3.7"
packages = imagenet_w
install_requires =
    Pillow
    torchvision
    torch
